# 3D-reconstruction

./: .gitignore  Images.qrc  Images_rc.py  README.md  UDEV_RULES_FOR_ARDUINO  camera_driver.py  capture_images.py  colour_finder.py  conf.ini  config_parser.py  design.py  gui_interface.py  launcher.desktop  logging_info.py  reconstruct.py  show_video.py  utils.py
executables/: SurfaceTrimmer  pcl_ply2pcd  segmentation
segment/: CMakeLists.txt  INIReader.h  segmentation.cpp
